# sfc

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  init.rs  lib.rs  main.rs  model.rs  project.rs
src/analyzer/: dead.rs  introspect.rs  listeners.rs  mod.rs  routes.rs  voters.rs  weight.rs
src/optimizer/: backup.rs  dead.rs  mod.rs  preload.rs  rewrite.rs  unreachable.rs  util.rs
src/parser/: container.rs  mod.rs  roles.rs  routes.rs  util.rs
src/preload/: collector.rs  generator.rs  mod.rs
src/report/: json.rs  mod.rs  terminal.rs
tests/: parse_container.rs
