[package]
name = "sfc"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Symfony Companion CLI — post-build analysis and optimization"

[dependencies]
bumpalo = "3"
clap = { version = "4", default-features = false, features = ["std", "help", "usage", "error-context"] }
mago-database = "1"
mago-names = "1"
mago-span = "1"
mago-syntax = "1"
petgraph = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termcolor = "1"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
